# stm32_project_template

./: README.md  init.py  meson.build  meson_options.txt
core/src/: startup_stm32l476xx.s
scripts/: flash.sh  openocd_server.sh
stm32_files/: stm32l47x.ld
template_files/stm32_files/: stm32_cross_properties.cfg
